// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Report Config Dialog component tests should render dialog with disabled report format selection 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  margin-left: -5px;
}

.c34>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c34>* {
  margin-left: 5px;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c61 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c60 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c57 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c57:focus,
.c57:hover {
  border: 1px solid #4C4C4C;
}

.c57:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c57[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c57 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c57:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c59 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c59 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c55 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c56 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c24 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c25 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c25 * {
  height: inherit;
  width: inherit;
}

.c20 {
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
  background-color: #f3f3f3;
}

.c46 {
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 180px;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 250px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: default;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
}

.c17 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c22 {
  cursor: default;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c26 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c27 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c27 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c28 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
  width: 25%;
}

.c29 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
  width: 70%;
}

.c30 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
  width: 10%;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c51 {
  display: inline;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 0 3px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 0px;
  background-color: #e5e5e5;
  width: 80px;
}

.c52 {
  display: inline;
  color: #7F7F7F;
  margin-right: 2px;
}

.c52:hover {
  color: #000;
}

.c53 {
  text-overflow: ellipsis;
  overflow: hidden;
}

.c32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c35 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c45 {
  opacity: 1;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  background-color: #fff;
  font-size: 1.1em;
  position: relative;
  display: inline-block;
  overflow: hidden;
  padding: 0;
  vertical-align: middle;
}

.c40 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  border: none;
  background: none;
  color: inherit;
  padding: 0;
  margin: 0.2em 0;
  vertical-align: middle;
  margin-left: 0.4em;
  margin-right: 22px;
}

.c41 {
  background-color: #e5e5e5;
  color: #7F7F7F;
  border-left: 1px solid #4C4C4C;
  width: 16px;
  height: 50%;
  font-size: 0.6em;
  padding: 0;
  margin: 0;
  text-align: center;
  vertical-align: middle;
  position: absolute;
  right: 0;
  cursor: default;
  display: block;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c41:hover {
  background-color: #11ab51;
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c41:active {
  background-color: #fff;
  color: #074320;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c42 {
  border-top-right-radius: 1px;
  top: 0;
}

.c43 {
  border-bottom-right-radius: 1px;
  bottom: 0;
}

.c37 {
  display: block;
  height: auto;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 4px 8px;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media print {
  .c26 {
    border-collapse: collapse;
  }
}

@media print {
  .c27 {
    border-bottom: 1px solid black;
  }

  .c27 a,
  .c27 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c28 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c29 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c30 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Report Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        type="text"
                        value="foo"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Report Format
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-0-label"
                        class="c18"
                        role="combobox"
                      >
                        <div
                          class="c19"
                          width="180px"
                        >
                          <div
                            aria-haspopup="true"
                            aria-label="open menu"
                            class="c20"
                            data-toggle="true"
                            disabled=""
                            role="button"
                            type="button"
                          >
                            <div
                              class="c21 c22"
                              data-testid="select-selected-value"
                              disabled=""
                              title="example-configurable-1"
                            >
                              example-configurable-1
                            </div>
                            <div
                              class="c23"
                            >
                              <span
                                class="c24 c25"
                                data-testid="select-open-button"
                              >
                                ▼
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="c17"
                          data-testid="error-marker"
                        >
                          ×
                        </div>
                      </div>
                    </div>
                  </div>
                  <h2>
                    Parameters
                  </h2>
                  <table
                    class="c26"
                  >
                    <thead
                      class="c27"
                    >
                      <tr>
                        <th
                          class="c28"
                        >
                          <div
                            class="c13"
                          >
                            Name
                          </div>
                        </th>
                        <th
                          class="c29"
                        >
                          <div
                            class="c13"
                          >
                            Value
                          </div>
                        </th>
                        <th
                          class="c30"
                        >
                          <div
                            class="c13"
                          >
                            Default
                          </div>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class=""
                    >
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            StringParam
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <input
                              class="c15 c31"
                              maxlength="100"
                              name="StringParam"
                              type="text"
                              value="StringValue"
                            />
                            <div
                              class="c17"
                              data-testid="error-marker"
                            >
                              ×
                            </div>
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <label
                              class="c32"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <input
                                    checked=""
                                    class="c35 c36"
                                    name="StringParam"
                                    type="checkbox"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            TextParam
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <textarea
                              class="c37 c38"
                              cols="80"
                              name="TextParam"
                              rows="5"
                            >
                              TextValue
                            </textarea>
                            <div
                              class="c17"
                              data-testid="error-marker"
                            >
                              ×
                            </div>
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <label
                              class="c32"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <input
                                    class="c35 c36"
                                    name="TextParam"
                                    type="checkbox"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            IntegerParam
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <span
                              class="c39"
                            >
                              <input
                                class="c40"
                                data-testid="spinner-input"
                                max="50"
                                maxlength="5"
                                min="0"
                                name="IntegerParam"
                                size="4"
                                value="12"
                              />
                              <span
                                class="c41 c42"
                                data-testid="spinner-up"
                              >
                                ▲
                              </span>
                              <span
                                class="c41 c43"
                                data-testid="spinner-down"
                              >
                                ▼
                              </span>
                            </span>
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <label
                              class="c32"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <input
                                    checked=""
                                    class="c35 c36"
                                    name="IntegerParam"
                                    type="checkbox"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            BooleanParam
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <div
                              class="c13"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <label
                                    class="c32"
                                  >
                                    <div
                                      class="c13 c33"
                                    >
                                      <div
                                        class="c13 c34"
                                      >
                                        <input
                                          class="c35 c44"
                                          data-testid="radio-input"
                                          name="BooleanParam"
                                          type="radio"
                                          value="1"
                                        />
                                        <span
                                          class="c45"
                                          data-testid="radio-title"
                                        >
                                          Yes
                                        </span>
                                      </div>
                                    </div>
                                  </label>
                                  <label
                                    class="c32"
                                  >
                                    <div
                                      class="c13 c33"
                                    >
                                      <div
                                        class="c13 c34"
                                      >
                                        <input
                                          class="c35 c44"
                                          data-testid="radio-input"
                                          name="BooleanParam"
                                          type="radio"
                                          value="0"
                                        />
                                        <span
                                          class="c45"
                                          data-testid="radio-title"
                                        >
                                          No
                                        </span>
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <label
                              class="c32"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <input
                                    class="c35 c36"
                                    name="BooleanParam"
                                    type="checkbox"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            SelectionParam
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <div
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-labelledby="downshift-1-label"
                              class="c18"
                              role="combobox"
                            >
                              <div
                                class="c19"
                                width="180px"
                              >
                                <div
                                  aria-haspopup="true"
                                  aria-label="open menu"
                                  class="c46"
                                  data-toggle="true"
                                  role="button"
                                  type="button"
                                >
                                  <div
                                    class="c47 c22"
                                    data-testid="select-selected-value"
                                    title="OptionB"
                                  >
                                    OptionB
                                  </div>
                                  <div
                                    class="c23"
                                  >
                                    <span
                                      class="c24 c25"
                                      data-testid="select-open-button"
                                    >
                                      ▼
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="c17"
                                data-testid="error-marker"
                              >
                                ×
                              </div>
                            </div>
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <label
                              class="c32"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <input
                                    class="c35 c36"
                                    name="SelectionParam"
                                    type="checkbox"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c10"
                          >
                            ReportFormatListParam
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <div
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-labelledby="downshift-2-label"
                              class="c48"
                              role="combobox"
                            >
                              <div
                                class="c49"
                                width="250px"
                              >
                                <div
                                  class="c46"
                                >
                                  <div
                                    class="c50"
                                  >
                                    <div
                                      class="c47 c51"
                                      title="non-configurable-1"
                                    >
                                      <div
                                        class="c13"
                                      >
                                        <div
                                          class="c52"
                                          data-testid="multiselect-selected-delete"
                                        >
                                          × 
                                        </div>
                                        <span
                                          class="c53"
                                          data-testid="multiselect-selected-label"
                                        >
                                          non-configurable-1
                                        </span>
                                      </div>
                                    </div>
                                    <div
                                      class="c47 c51"
                                      title="non-configurable-2"
                                    >
                                      <div
                                        class="c13"
                                      >
                                        <div
                                          class="c52"
                                          data-testid="multiselect-selected-delete"
                                        >
                                          × 
                                        </div>
                                        <span
                                          class="c53"
                                          data-testid="multiselect-selected-label"
                                        >
                                          non-configurable-2
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="c23"
                                  >
                                    <span
                                      aria-haspopup="true"
                                      aria-label="open menu"
                                      class="c24 c25"
                                      data-toggle="true"
                                      role="button"
                                      type="button"
                                    >
                                      ▼
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="c17"
                                data-testid="error-marker"
                              >
                                ×
                              </div>
                            </div>
                          </div>
                        </td>
                        <td>
                          <div
                            class="c10"
                          >
                            <label
                              class="c32"
                            >
                              <div
                                class="c13 c33"
                              >
                                <div
                                  class="c13 c34"
                                >
                                  <input
                                    class="c35 c36"
                                    name="ReportFormatListParam"
                                    type="checkbox"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <div
              class="c54 c55 c56"
            >
              <button
                class="c57 c58 c59"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c57 c58 c59"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c60"
          >
            <div
              class="c61"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`New Report Config Dialog component tests should render dialog 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c33 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c32 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c29 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c29:focus,
.c29:hover {
  border: 1px solid #4C4C4C;
}

.c29:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c29[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c29 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c29:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c31 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c27 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c28 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c24 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c25 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c25 * {
  height: inherit;
  width: inherit;
}

.c20 {
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 180px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
}

.c17 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c22 {
  cursor: default;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                New Report Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        type="text"
                        value="Unnamed"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        type="text"
                        value=""
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Report Format
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-15-label"
                        class="c18"
                        role="combobox"
                      >
                        <div
                          class="c19"
                          width="180px"
                        >
                          <div
                            aria-haspopup="true"
                            aria-label="open menu"
                            class="c20"
                            data-toggle="true"
                            role="button"
                            type="button"
                          >
                            <div
                              class="c21 c22"
                              data-testid="select-selected-value"
                            />
                            <div
                              class="c23"
                            >
                              <span
                                class="c24 c25"
                                data-testid="select-open-button"
                              >
                                ▼
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="c17"
                          data-testid="error-marker"
                        >
                          ×
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c26 c27 c28"
            >
              <button
                class="c29 c30 c31"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c29 c30 c31"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c32"
          >
            <div
              class="c33"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
